# tfm-almendros-fl

./: .dockerignore  .gitignore  README.md  aggregate_seeds.py  centralized_baseline.ipynb  compose.yml  docker-compose.yml.old  gen_confusion_matrices.py  generate_figures.py  pyproject.toml  run_all_6.sh  run_comparativa.sh  run_deployment.sh  run_phase2_only.sh  with-tls.yml
almendros_fl/: __init__.py  client_app.py  fix_csvs.py  logger.py  server_app.py  server_app.py.bak  summary.py  task.py  task_resnet18.py.bak
